(up) Atualiza gitignore

--- a/electron/resources/app/index.html
+++ b/electron/resources/app/index.html
@@ -44,5 +44,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="main-K6LA3TFR.js" type="module"></script></body>
+<script src="main-ZXS6X4SU.js" type="module"></script></body>
 </html>
